--- a/styles/styles.css
+++ b/styles/styles.css
@@ -798,7 +798,7 @@ body {
 .control-mark-square {
   position: absolute;
   top: 2px;
-  left: 0px;
+  left: 0;
   width: 20px;
   height: 19px;
   border: 2px solid;
