--- a/styles/styles.css
+++ b/styles/styles.css
@@ -795,6 +795,15 @@ body {
   padding-left: 16px;
 }
 
+.control:active {
+  opacity: 60%;
+}
+
+.control:active {
+  opacity: 60%;
+}
+
+
 .control-mark-square {
   position: absolute;
   top: 2px;
@@ -816,6 +825,11 @@ body {
   background-image: url("../images/check-mark.svg");
   position: absolute;
 }
+
+.control-mark-square:focus {
+  border: 4px solid #1fa392;
+}
+
 
 .control-mark-circle {
   position: absolute;
