--- a/styles/styles.css
+++ b/styles/styles.css
@@ -825,11 +825,6 @@ body {
   position: absolute;
 }
 
-.control-mark-square:focus {
-  border: 4px solid #1fa392;
-}
-
-
 .control-mark-circle {
   position: absolute;
   top: 2px;
@@ -852,6 +847,10 @@ body {
   border-radius: 50%;
   position: absolute;
   margin: 5px 5px;
+}
+
+.control:hover + .control-mark-circle {
+  border: 4px solid #1fa392;
 }
 
 
@@ -916,7 +915,19 @@ body {
   height: 20px;
   border-radius: 5px;
   position: absolute;
+  border: none;
 }
+
+.range-toggle:active {
+  border: 2px solid #83b3d3;
+}
+
+.range-toggle:focus {
+  outline: none;
+  border: 2px solid #83b3d3;
+}
+
+
 
 .toggle-min {
   top: -8px;
