--- a/styles/styles.css
+++ b/styles/styles.css
@@ -898,6 +898,23 @@ body {
   border-radius: 4px;
   border: none;
   padding-left: 20px;
+  display: block;
+  box-sizing: border-box;
+}
+
+.range-input:focus {
+  outline: none;
+  border: 3px solid #83b3d3;
+}
+
+.range-input:hover {
+  border: 3px solid #000000;
+}
+
+.range-input::-webkit-outer-spin-button,
+.range-input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
 }
 
 .range-min {
