--- a/styles/styles.css
+++ b/styles/styles.css
@@ -691,6 +691,55 @@ body {
   color: #000000;
 }
 
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 64px 70px;
+  width: 577px;
+  min-height: 448px;
+  background-color: #ffffff;
+}
+
+.modal-close-button {
+  width: 53px;
+  height: 53px;
+  border-radius: 50%;
+  background-color: #f2f2f2;
+  border: 0;
+  background-image: url("../images/cross.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  top: 91px;
+  left: 599px;
+  cursor: pointer;
+}
+
+.modal-close-button:focus {
+  outline: none;
+  border: 3px solid #83b3d3;
+}
+
+.modal-title{
+font-family: "PT Sans";
+font-size: 30px;
+font-weight: 700;
+line-height: 36px;
+text-align: left;
+}
+
 .filter-background {
   background-image: url("../images/subscribe-2.jpg");
   background-repeat: no-repeat;
@@ -943,8 +992,6 @@ body {
   outline: none;
   border: 2px solid #83b3d3;
 }
-
-
 
 .toggle-min {
   top: -8px;
