Добавляет формы и кнопки

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -740,6 +740,22 @@ line-height: 36px;
 text-align: left;
 }
 
+.modal-container-button {
+font-family: "PT Sans";
+font-size: 20px;
+font-weight: 700;
+line-height: 24px;
+text-align: center;
+color:#ffffff;
+background-color: #83b3d3;
+width: auto;
+min-height: 60px;
+border-radius: 10px;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
 .filter-background {
   background-image: url("../images/subscribe-2.jpg");
   background-repeat: no-repeat;
