--- a/styles/styles.css
+++ b/styles/styles.css
@@ -738,6 +738,17 @@ body {
   font-weight: 700;
   line-height: 36px;
   text-align: left;
+  margin-bottom: 64px;
+}
+
+.date-form {
+  display: grid;
+  gap: 48px;
+  margin-bottom: 48px;
+}
+
+.date-form p {
+  margin-top: 0;
 }
 
 .modal-container-button {
@@ -774,7 +785,20 @@ body {
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
-  text-align: left;
+  width: 440px;
+  height: 48px;
+  background-color: #f2f2f2;
+  border: 0;
+  border-radius: 4px;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
+}
+
+.form-number {
+  width: 110px;
+  height: 48px;
+  text-align: center;
 
 }
 
