--- a/styles/styles.css
+++ b/styles/styles.css
@@ -802,6 +802,19 @@ body {
 
 }
 
+.field-group {
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+
+.quantity-group {
+  width: 248px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .filter-background {
   background-image: url("../images/subscribe-2.jpg");
   background-repeat: no-repeat;
