--- a/styles/styles.css
+++ b/styles/styles.css
@@ -765,6 +765,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-decoration: none;
+}
+
+.modal-container-button:hover {
+  background-color: #68a2ca;
+}
+
+.modal-container-button:hover {
+  background-color: #68a2ca;
+}
+
+.modal-container-button:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .number-of-visitors {
@@ -803,9 +816,9 @@ body {
 }
 
 .field-group {
-display: flex;
-justify-content: space-between;
-align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .quantity-group {
