--- a/styles/styles.css
+++ b/styles/styles.css
@@ -772,7 +772,7 @@ body {
   background-color: #68a2ca;
 }
 
-.modal-container-button:hover {
+.modal-container-button:focus {
   background-color: #68a2ca;
 }
 
@@ -806,6 +806,12 @@ body {
   padding-left: 20px;
   padding-right: 20px;
   box-sizing: border-box;
+  opacity: 60%;
+}
+
+.modal-form-text:focus {
+  outline: none;
+  border: 3px solid rgba(131, 179, 211, 1);
 }
 
 .form-number {
