--- a/styles/styles.css
+++ b/styles/styles.css
@@ -793,18 +793,6 @@ body {
   text-align: left;
 }
 
-.tooltip-toggle {
-  width: 26px;
-  height: 26px;
-  background-color: #83b3d3;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  margin-right: 46px;
-}
-
 .modal-form-text {
   font-family: " PT Sans";
   font-size: 18px;
@@ -844,6 +832,43 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.tooltip {
+}
+
+.tooltip-toggle {
+  width: 26px;
+  height: 26px;
+  background-color: #83b3d3;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  margin-right: 46px;
+  border: 0;
+}
+
+.tooltip-text {
+  font-family: "PT Sans";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: left;
+  width: 256px;
+  min-height: 143px;
+  background-color: #333333;
+  color: #ffffff;
+  padding: 18px;
+  border-radius: 10px;
+  display: block;
+  position: absolute;
+  bottom: 44px;
+  left: 328px;
+  box-sizing: border-box;
+  display: none;
 }
 
 .filter-background {
