--- a/styles/styles.css
+++ b/styles/styles.css
@@ -818,7 +818,6 @@ body {
   width: 110px;
   height: 48px;
   text-align: center;
-
 }
 
 .field-group {
@@ -834,21 +833,21 @@ body {
   justify-content: space-between;
 }
 
-.tooltip {
-}
-
 .tooltip-toggle {
   width: 26px;
   height: 26px;
   background-color: #83b3d3;
   border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 0;
   margin: 0;
   margin-right: 46px;
   border: 0;
+}
+
+.tooltip-icon {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .tooltip-text {
@@ -863,12 +862,19 @@ body {
   color: #ffffff;
   padding: 18px;
   border-radius: 10px;
-  display: block;
   position: absolute;
   bottom: 44px;
   left: 328px;
   box-sizing: border-box;
   display: none;
+}
+
+.tooltip-toggle:hover + .tooltip-text {
+  display: block;
+}
+
+.tooltip-toggle:focus + .tooltip-text {
+  display: block;
 }
 
 .filter-background {
