--- a/styles/styles.css
+++ b/styles/styles.css
@@ -814,7 +814,6 @@ body {
   padding-left: 20px;
   padding-right: 20px;
   box-sizing: border-box;
-  opacity: 60%;
 }
 
 .modal-form-text:focus {
@@ -826,6 +825,7 @@ body {
   width: 110px;
   height: 48px;
   text-align: center;
+
 }
 
 .field-group {
@@ -1091,6 +1091,15 @@ body {
 .range-wrapper-inputs {
   display: flex;
   gap: 2px;
+}
+
+::placeholder{
+padding-right: 12px;
+font-family: "PT Sans";
+font-size: 18px;
+font-weight: 400;
+line-height: 24px;
+text-align: right;
 }
 
 .range-scale {
