--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1093,19 +1093,25 @@ body {
   gap: 2px;
 }
 
-::placeholder{
-padding-right: 12px;
-font-family: "PT Sans";
-font-size: 18px;
-font-weight: 400;
-line-height: 24px;
-text-align: right;
+.range-form-field-text {
+  position: relative;
+}
+
+.range-form-field-text span {
+  font-family: "PT Sans";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #a8a4a4;
+  position: absolute;
+  top: 10px;
+  left: 105px;
 }
 
 .range-scale {
   position: relative;
   height: 4px;
-  background-color: gray;
+  background-color: #a8a4a4;
   border-radius: 2px;
 }
 
