Убирает стрелки в инпут

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -828,6 +828,12 @@ body {
 
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .field-group {
   display: flex;
   justify-content: space-between;
