--- a/styles/styles.css
+++ b/styles/styles.css
@@ -825,8 +825,33 @@ body {
   width: 110px;
   height: 48px;
   text-align: center;
-
 }
+
+.modal-input-container {
+  position: relative;
+}
+
+.modal-button {
+  border: none;
+  width: 40px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+}
+
+.plus {
+  position: absolute;
+  top: 1px
+}
+
+.minus {
+  position: absolute;
+  top:1px;
+  left:70px;
+}
+
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
