--- a/styles/styles.css
+++ b/styles/styles.css
@@ -840,6 +840,7 @@ body {
   align-items: center;
   border-radius: 4px;
   color: rgba(117, 97, 87, 0.3);
+  background-color: transparent;
 }
 
 .modal-button:hover {
