--- a/styles/styles.css
+++ b/styles/styles.css
@@ -816,6 +816,7 @@ body {
   box-sizing: border-box;
   position: relative;
   display: block;
+  margin-bottom: 4px;
 }
 
 .modal-form-text::after {
@@ -899,6 +900,19 @@ input::-webkit-inner-spin-button {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.data-information {
+  margin: 0;
+  padding-left: 20px;
+  font-size: 16px;
+  line-height: 21px;
+  color: #333333;
+
+}
+
+.data-error {
+  color: #ff5757;
 }
 
 .quantity-group {
