--- a/styles/styles.css
+++ b/styles/styles.css
@@ -801,7 +801,7 @@ body {
   text-align: left;
 }
 
-.data-icon{
+.data-icon {
   position: relative;
 }
 
@@ -822,12 +822,12 @@ body {
   margin-bottom: 4px;
 }
 
-.modal-form-text::placeholder{
-font-size: 18px;
-font-weight: 700;
-line-height: 24px;
-text-align: left;
-color:#000000;
+.modal-form-text::placeholder {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  text-align: left;
+  color: #000000;
 }
 
 .data-icon::after {
@@ -1115,6 +1115,14 @@ input::-webkit-inner-spin-button {
   opacity: 30%;
 }
 
+.control-input:focus + .control-mark-circle {
+  border: 3px solid #83B3D3;
+}
+
+.control-input:focus + .control-mark-square {
+  border: 3px solid #83B3D3;
+}
+
 .control-mark-square {
   position: absolute;
   top: 2px;
@@ -1160,11 +1168,6 @@ input::-webkit-inner-spin-button {
   position: absolute;
   margin: 5px 5px;
 }
-
-.control:hover + .control-mark-circle {
-  border: 4px solid #1fa392;
-}
-
 
 .button-catalog-filter {
   width: 191px;
