--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1228,6 +1228,7 @@ input::-webkit-inner-spin-button {
   border-radius: 4px;
   border: none;
   padding-left: 20px;
+  padding-right: 37px;
   display: block;
   box-sizing: border-box;
 }
@@ -1239,6 +1240,11 @@ input::-webkit-inner-spin-button {
 
 .range-input:hover {
   border: 3px solid #000000;
+}
+
+.range-input:placeholder-shown {
+  outline: none;
+  border: 2px solid #000000;
 }
 
 .range-input::-webkit-outer-spin-button,
