--- a/styles/styles.css
+++ b/styles/styles.css
@@ -690,6 +690,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
+  /* display: none; */
 }
 
 .modal {
@@ -891,12 +892,12 @@ input::-webkit-calendar-picker-indicator {
   opacity: 20%;
 }
 
-.plus {
+.minus {
   position: absolute;
   top: 1px
 }
 
-.minus {
+.plus {
   position: absolute;
   top: 1px;
   left: 70px;
