--- a/styles/styles.css
+++ b/styles/styles.css
@@ -746,7 +746,7 @@ body {
 
 .date-form {
   display: grid;
-  gap:23px;
+  gap: 23px;
 }
 
 .date-form p {
@@ -825,7 +825,7 @@ body {
   color: #000000;
 }
 
-.modal-content{
+.modal-content {
   margin-bottom: 48px;
 }
 
@@ -858,19 +858,18 @@ input::-webkit-calendar-picker-indicator {
 .form-number {
   width: 31px;
   height: 48px;
-  text-align: center;
+  display: inline-block;
+  margin: 0;
+  border-radius: 0;
 }
 
 .modal-button {
   border: none;
   width: 40px;
   height: 48px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   border-radius: 4px;
   color: rgba(117, 97, 87, 0.3);
-  background-color: transparent;
+  background-color: #f2f2f2;
 }
 
 .modal-button:hover {
@@ -888,17 +887,20 @@ input::-webkit-calendar-picker-indicator {
   opacity: 20%;
 }
 
-.modal-input-container{
+.modal-input-container {
   display: flex;
 }
 
 .minus {
   display: inline-block;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .plus {
   display: inline-block;
-
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 input::-webkit-outer-spin-button,
