--- a/styles/styles.css
+++ b/styles/styles.css
@@ -810,8 +810,6 @@ body {
   background-color: #f2f2f2;
   border: 0;
   border-radius: 4px;
-  padding-left: 20px;
-  padding-right: 20px;
   box-sizing: border-box;
   display: block;
   margin-bottom: 4px;
@@ -858,18 +856,21 @@ input::-webkit-calendar-picker-indicator {
 .form-number {
   width: 31px;
   height: 48px;
-  display: inline-block;
   margin: 0;
   border-radius: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-button {
   border: none;
-  width: 40px;
-  height: 48px;
+  width: 20px;
+  height: 20px;
   border-radius: 4px;
   color: rgba(117, 97, 87, 0.3);
-  background-color: #f2f2f2;
+  background-color: transparent;
+  margin: 14px 10px;
 }
 
 .modal-button:hover {
@@ -886,21 +887,26 @@ input::-webkit-calendar-picker-indicator {
   border: none;
   opacity: 20%;
 }
-
+/* нужно выровнить плюсики и минусики */
 .modal-input-container {
   display: flex;
+  background-color: #f2f2f2;
+  align-items: center;
+  width: 111px;
+  min-height: 48px;
+border-radius: 4px;
+}
+
+.modal-input-container svg{
 }
 
 .minus {
-  display: inline-block;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
+
+
 }
 
 .plus {
-  display: inline-block;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+
 }
 
 input::-webkit-outer-spin-button,
