--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1200,6 +1200,7 @@ input::-webkit-inner-spin-button {
   top: 10px;
   left: 105px;
 }
+/* opacity не работает, закрашивается вся полоска */
 
 .range-scale {
   position: relative;
