--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1181,11 +1181,6 @@ input::-webkit-inner-spin-button {
   text-transform: uppercase;
 }
 
-.range-wrapper-inputs {
-  display: flex;
-  gap: 2px;
-}
-
 .range-form-field-text {
   position: relative;
 }
@@ -1252,6 +1247,10 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+.range-input[type='number'] {
+  -moz-appearance: textfield;
+}
+
 .range-min {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
@@ -1295,6 +1294,7 @@ input::-webkit-inner-spin-button {
 
 .range-wrapper-inputs {
   margin-bottom: 36px;
+  display: flex;
 }
 
 .button-submit:focus {
