--- a/styles/styles.css
+++ b/styles/styles.css
@@ -567,7 +567,7 @@ body {
   height: 52px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 20px;
   font-weight: 700;
   line-height: 36px;
@@ -735,7 +735,7 @@ body {
 }
 
 .modal-title {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
@@ -751,7 +751,7 @@ body {
 }
 
 .modal-container-button {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
@@ -799,7 +799,7 @@ body {
 }
 
 .modal-form-text {
-  font-family: " PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
@@ -953,7 +953,7 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .tooltip-text {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -1091,7 +1091,7 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .control-label {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 23px;
@@ -1186,8 +1186,7 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .range-form-field-text span {
-  font-family: "PT Sans";
-  font-size: 18px;
+  font-family: "PT Sans", sans-serif;
   font-weight: 400;
   line-height: 24px;
   color: #a8a4a4;
@@ -1212,7 +1211,7 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .range-input {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
@@ -1422,7 +1421,7 @@ input::-webkit-calendar-picker-indicator {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   text-align: left;
 }
 
