--- a/9/styles/styles.css
+++ b/9/styles/styles.css
@@ -567,7 +567,7 @@ body {
   height: 52px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 20px;
   font-weight: 700;
   line-height: 36px;
@@ -690,6 +690,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
+  /* display: none; */
 }
 
 .modal {
@@ -730,22 +731,18 @@ body {
 }
 
 .modal-close-button:active {
-  opacity: 30%;
+  opacity: 0.3;
 }
 
 .modal-title {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
   text-align: left;
   margin-top: 0;
   margin-bottom: 64px;
-}
-
-.date-form {
-  display: grid;
-  gap:23px;
+  text-transform: uppercase;
 }
 
 .date-form p {
@@ -754,20 +751,21 @@ body {
 }
 
 .modal-container-button {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
   text-align: center;
   color: #ffffff;
   background-color: #83b3d3;
-  width: auto;
+  width: 577px;
   min-height: 60px;
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-  text-decoration: none;
+  border: none;
+  text-transform: uppercase;
 }
 
 .modal-container-button:hover {
@@ -785,6 +783,7 @@ body {
 .number-of-visitors {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 48px;
 }
 
 .modal-form-title {
@@ -800,7 +799,7 @@ body {
 }
 
 .modal-form-text {
-  font-family: " PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
@@ -809,8 +808,6 @@ body {
   background-color: #f2f2f2;
   border: 0;
   border-radius: 4px;
-  padding-left: 20px;
-  padding-right: 20px;
   box-sizing: border-box;
   display: block;
   margin-bottom: 4px;
@@ -824,14 +821,10 @@ body {
   color: #000000;
 }
 
-.modal-content{
-  margin-bottom: 48px;
-}
-
 .data-icon::after {
   content: "";
-  width: 20px;
-  height: 48px;
+  width: 16px;
+  height: 15px;
   background-color: #f2f2f2;
   background-image: url("../images/calendar.svg");
   background-repeat: no-repeat;
@@ -855,25 +848,24 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .form-number {
-  width: 110px;
+  width: 31px;
   height: 48px;
-  text-align: center;
-}
-
-.modal-input-container {
-  position: relative;
+  margin: 0;
+  border-radius: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-button {
   border: none;
-  width: 40px;
-  height: 48px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 20px;
+  height: 20px;
   border-radius: 4px;
   color: rgba(117, 97, 87, 0.3);
   background-color: transparent;
+  margin: 14px 10px;
+  position: relative;
 }
 
 .modal-button:hover {
@@ -891,19 +883,29 @@ input::-webkit-calendar-picker-indicator {
   opacity: 20%;
 }
 
-.plus {
-  position: absolute;
-  top: 1px
+/* не получается выравнить плюс и минус */
+.modal-input-container {
+  display: flex;
+  background-color: #f2f2f2;
+  align-items: center;
+  width: 111px;
+  min-height: 48px;
+  border-radius: 4px;
 }
 
 .minus {
   position: absolute;
-  top: 1px;
-  left: 70px;
+  left:4px;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+.plus {
+position: absolute;
+left: 3px;
+top:4px;
+}
+
+.modal-input::-webkit-outer-spin-button,
+.modal-input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
@@ -912,6 +914,7 @@ input::-webkit-inner-spin-button {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  margin-bottom: 23px;
 }
 
 .data-information {
@@ -956,7 +959,7 @@ input::-webkit-inner-spin-button {
 }
 
 .tooltip-text {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -982,7 +985,8 @@ input::-webkit-inner-spin-button {
   background-image: url("../images/Vector-tooltip.svg");
   position: absolute;
   bottom: 100%;
-  left: 50%;
+  left: 54%;
+  transform: translateX(-54%);
 }
 
 .form-label-icon {
@@ -1093,7 +1097,7 @@ input::-webkit-inner-spin-button {
 }
 
 .control-label {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 23px;
@@ -1183,18 +1187,12 @@ input::-webkit-inner-spin-button {
   text-transform: uppercase;
 }
 
-.range-wrapper-inputs {
-  display: flex;
-  gap: 2px;
-}
-
 .range-form-field-text {
   position: relative;
 }
 
 .range-form-field-text span {
-  font-family: "PT Sans";
-  font-size: 18px;
+  font-family: "PT Sans", sans-serif;
   font-weight: 400;
   line-height: 24px;
   color: #a8a4a4;
@@ -1202,6 +1200,8 @@ input::-webkit-inner-spin-button {
   top: 10px;
   left: 105px;
 }
+
+/* opacity не работает, закрашивается вся полоска */
 
 .range-scale {
   position: relative;
@@ -1217,7 +1217,7 @@ input::-webkit-inner-spin-button {
 }
 
 .range-input {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
@@ -1251,6 +1251,10 @@ input::-webkit-inner-spin-button {
 .range-input::-webkit-inner-spin-button {
   appearance: none;
   margin: 0;
+}
+
+.range-input[type='number'] {
+  -moz-appearance: textfield;
 }
 
 .range-min {
@@ -1296,6 +1300,7 @@ input::-webkit-inner-spin-button {
 
 .range-wrapper-inputs {
   margin-bottom: 36px;
+  display: flex;
 }
 
 .button-submit:focus {
@@ -1422,7 +1427,7 @@ input::-webkit-inner-spin-button {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   text-align: left;
 }
 
