--- a/styles/styles.css
+++ b/styles/styles.css
@@ -839,7 +839,7 @@ body {
 
 .modal-form-text:focus {
   outline: none;
-  border: 3px soli #83b3d3;
+  border: 3px solid #83b3d3;
 }
 
 .modal-form-text:not(:placeholder-shown) {
@@ -851,10 +851,12 @@ body {
   height: 48px;
   margin: 0;
   border-radius: 0;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
+  padding: 10px 14px;
 }
+
 
 .form-number[type='number'] {
   -moz-appearance: textfield;
