--- a/styles/styles.css
+++ b/styles/styles.css
@@ -810,13 +810,15 @@ body {
   box-sizing: border-box;
   display: block;
   margin-bottom: 4px;
+  text-align: start;
+  padding-left: 20px;
 }
 
 .modal-form-text::placeholder {
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
-  text-align: left;
+  text-align: center;
   color: #000000;
 }
 
@@ -846,15 +848,20 @@ body {
   border: 2px solid #000000;
 }
 
+/* цифры выравнить по центру */
+
 .form-number {
   width: 31px;
   height: 48px;
   margin: 0;
+  border: 0;
   border-radius: 0;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
-  padding: 10px 14px;
+  background-color: #f2f2f2;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: center;
 }
 
 
