--- a/styles/styles.css
+++ b/styles/styles.css
@@ -860,6 +860,16 @@ body {
   font-weight: 700;
   line-height: 20px;
   text-align: center;
+  box-sizing: border-box;
+}
+
+.form-number:focus {
+  outline: none;
+  border: 3px solid #83b3d3;
+}
+
+.form-number:not(:placeholder-shown) {
+  border: 2px solid #000000;
 }
 
 
