--- a/9/styles/styles.css
+++ b/9/styles/styles.css
@@ -690,7 +690,6 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
-  /* display: none; */
 }
 
 .modal {
@@ -811,13 +810,15 @@ body {
   box-sizing: border-box;
   display: block;
   margin-bottom: 4px;
+  text-align: start;
+  padding-left: 20px;
 }
 
 .modal-form-text::placeholder {
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
-  text-align: left;
+  text-align: center;
   color: #000000;
 }
 
@@ -831,16 +832,16 @@ body {
   position: absolute;
   top: 16px;
   right: 22px;
-  opacity: 30%;
+  opacity: 0.3;
 }
 
-input::-webkit-calendar-picker-indicator {
+.modal-form-text::-webkit-calendar-picker-indicator {
   opacity: 0;
 }
 
 .modal-form-text:focus {
   outline: none;
-  border: 3px solid rgba(131, 179, 211, 1);
+  border: 3px solid #83b3d3;
 }
 
 .modal-form-text:not(:placeholder-shown) {
@@ -851,10 +852,29 @@ input::-webkit-calendar-picker-indicator {
   width: 31px;
   height: 48px;
   margin: 0;
+  border: 0;
   border-radius: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: #f2f2f2;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.form-number:focus {
+  outline: none;
+  border: 3px solid #83b3d3;
+}
+
+.form-number:not(:placeholder-shown) {
+  border: 2px solid #000000;
+}
+
+
+.form-number[type='number'] {
+  -moz-appearance: textfield;
 }
 
 .modal-button {
@@ -895,17 +915,17 @@ input::-webkit-calendar-picker-indicator {
 
 .minus {
   position: absolute;
-  left:4px;
+  left: 4px;
 }
 
 .plus {
-position: absolute;
-left: 3px;
-top:4px;
+  position: absolute;
+  left: 3px;
+  top: 4px;
 }
 
-.modal-input::-webkit-outer-spin-button,
-.modal-input::-webkit-inner-spin-button {
+.form-number::-webkit-outer-spin-button,
+.form-number::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
@@ -982,7 +1002,7 @@ top:4px;
   content: "";
   width: 19px;
   height: 9px;
-  background-image: url("../images/Vector-tooltip.svg");
+  background-image: url("../images/vector-tooltip.svg");
   position: absolute;
   bottom: 100%;
   left: 54%;
@@ -1112,11 +1132,11 @@ top:4px;
 }
 
 .control:hover {
-  opacity: 60%;
+  opacity: 0.6;
 }
 
 .control:active {
-  opacity: 30%;
+  opacity: 0.3;
 }
 
 .control-input:focus + .control-mark-circle {
@@ -1338,7 +1358,7 @@ top:4px;
 }
 
 .button-reset:disabled {
-  opacity: 10%;
+  opacity: 0.1;
 }
 
 .catalog-filter-group {
@@ -1377,7 +1397,7 @@ top:4px;
 }
 
 .select-control {
-  border: 2px solid rgba(229, 229, 229, 1);
+  border: 2px solid #e5e5e5;
 }
 
 .select-control:hover {
