--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1002,7 +1002,7 @@ body {
   content: "";
   width: 19px;
   height: 9px;
-  background-image: url("../images/vector-tooltip.svg");
+  background-image: url("../images/vector.svg");
   position: absolute;
   bottom: 100%;
   left: 54%;
