--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1222,19 +1222,17 @@ body {
   left: 105px;
 }
 
-/* opacity не работает, закрашивается вся полоска */
+ .range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #ffffff;
+}
 
 .range-scale {
   position: relative;
   height: 4px;
-  background-color: #a8a4a4;
+  background-color: rgba(255, 255, 255, 0.3);
   border-radius: 2px;
-}
-
-.range-bar {
-  position: absolute;
-  height: 4px;
-  background-color: #ffffff;
 }
 
 .range-input {
