--- a/styles/styles.css
+++ b/styles/styles.css
@@ -786,7 +786,7 @@ body {
 }
 
 .modal-form-title {
-  font-family: "PT Sans";
+  font-family: "PT Sans",sans-serif;
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
