--- a/styles/styles.css
+++ b/styles/styles.css
@@ -543,11 +543,13 @@ body {
 
 .subscription-form {
   display: flex;
+  justify-content: center;
+
 }
 
 .field {
   width: 452px;
-  height: 52px;
+  min-height: 52px;
   box-sizing: border-box;
   border: none;
   border-top-left-radius: 4px;
@@ -564,7 +566,7 @@ body {
 
 .button-subscription-button {
   width: 232px;
-  height: 52px;
+  min-height: 52px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   font-family: "PT Sans", sans-serif;
