--- a/styles/styles.css
+++ b/styles/styles.css
@@ -194,6 +194,7 @@ body {
   right: 11px;
   top: -10px;
   color: #ffffff;
+  text-align: center;
   font-size: 10px;
   display: flex;
   align-items: center;
