--- a/styles/styles.css
+++ b/styles/styles.css
@@ -118,11 +118,13 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
-  width: 270px;
+  width: 268px;
   margin-left: auto;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  gap:2px;
+  /* разлепить кнопки gap */
 }
 
 .menu-link {
@@ -132,6 +134,10 @@ body {
   align-items: center;
   justify-content: center;
   color: #000000;
+}
+
+.menu-item{
+
 }
 
 .menu-link:focus {
