--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,7 +72,6 @@ body {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  gap: 32px;
 }
 
 .navigation-link {
@@ -83,11 +82,11 @@ body {
   font-weight: 700;
   text-align: center;
   list-style-type: none;
-  min-height: 64px;
+  min-height: 24px;
   display: flex;
   align-items: center;
   box-sizing: content-box;
-  padding: 0;
+  padding: 20px 16px;
   position: relative;
 }
 
@@ -109,7 +108,7 @@ body {
   height: 2px;
   background-color: #756257;
   margin: 20px auto;
-  width: 100%;
+  width: 70%;
   position: absolute;
   bottom: -20px;
 }
