--- a/styles/styles.css
+++ b/styles/styles.css
@@ -712,6 +712,8 @@ body {
   min-height: 40px;
   grid-column-start: 3;
   grid-column-end: 4;
+  display: flex;
+  align-items: center;
 }
 
 .modal-container {
