--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1308,6 +1308,10 @@ body {
   border: 3px solid #000000;
 }
 
+.range-input::placeholder{
+  color: #000000;
+}
+
 .range-input:not(:placeholder-shown) {
   outline: none;
   border: 2px solid #000000;
