--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1457,7 +1457,12 @@ body {
 
 .select-control:focus {
   outline: none;
-  border-color: #3f5e72;
+  border-color: #68a2ca;
+}
+
+.select-control:not(:placeholder-shown) {
+  outline: none;
+  border: 2px solid #3f5e72;
 }
 
 .select-control:disabled {
